basic functionality done

--- a/TaskManagement.Api/appsettings.json
+++ b/TaskManagement.Api/appsettings.json
@@ -12,5 +12,24 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Persistence": {
+    "Provider":  "MySQL"
+  },
+  "ConnectionStrings": {
+    "TaskManagementDbContext": "Server=localhost;Database=taskmanagement;User=sha256user;Password=System@123321"
+  },
+  "IdentityServer": {
+    "Clients": {
+      "Tasks": {
+        "Profile": "IdentityServerSPA"
+      }
+    },
+    "Key": {
+      "Type": "Development"
+    }
+  },
+  "AppSettings": {
+    "Secret": "3EBB4B1D-BCC2-4099-AA6B-FDA08FA24622"
+  },
   "AllowedHosts": "*"
 }
