--- a/TaskManagement.Application/TaskManagement.Application.csproj
+++ b/TaskManagement.Application/TaskManagement.Application.csproj
@@ -1,13 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <UserSecretsId>aspnet-TaskManagement.Application-9054CD3E-4CBE-4B0F-A28B-0F5EE59D0F91</UserSecretsId>
-        <WebProject_DirectoryAccessLevelKey>0</WebProject_DirectoryAccessLevelKey>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="3.1.7"/>
+      <PackageReference Include="AutoMapper" Version="10.0.0" />
+      <PackageReference Include="FluentValidation" Version="9.1.2" />
+      <PackageReference Include="MediatR" Version="8.1.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\TaskManagement.Domain\TaskManagement.Domain.csproj" />
     </ItemGroup>
 
 </Project>
