--- a/TaskManagement.Persistence/TaskManagement.Persistence.csproj
+++ b/TaskManagement.Persistence/TaskManagement.Persistence.csproj
@@ -1,13 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <UserSecretsId>aspnet-TaskManagement.Persistence-925E70AE-A26C-447B-B33A-74FB5336F908</UserSecretsId>
-        <WebProject_DirectoryAccessLevelKey>0</WebProject_DirectoryAccessLevelKey>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="3.1.7"/>
+      <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="3.1.7" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.7" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\TaskManagement.Application\TaskManagement.Application.csproj" />
+      <ProjectReference Include="..\TaskManagement.Domain\TaskManagement.Domain.csproj" />
     </ItemGroup>
 
 </Project>
