task management based on multi tenant

--- a/TaskManagement.Api/appsettings.json
+++ b/TaskManagement.Api/appsettings.json
@@ -16,20 +16,35 @@
     "Provider":  "MySQL"
   },
   "ConnectionStrings": {
-    "TaskManagementDbContext": "Server=localhost;Database=taskmanagement;User=sha256user;Password=System@123321"
-  },
-  "IdentityServer": {
-    "Clients": {
-      "Tasks": {
-        "Profile": "IdentityServerSPA"
-      }
-    },
-    "Key": {
-      "Type": "Development"
-    }
+    "ConnectionString": "Server=localhost;Database=taskmanagement;User=sha256user;Password=System@123321"
   },
   "AppSettings": {
     "Secret": "3EBB4B1D-BCC2-4099-AA6B-FDA08FA24622"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Finbuckle:MultiTenant:Stores:ConfigurationStore": {
+    "Defaults": {
+      "ConnectionString": "Server=localhost;Database=taskmanagement;User=sha256user;Password=System@123321"
+    },
+    "Tenants": [
+      {
+        "Id": "tenant-finbuckle-d043favoiaw",
+        "Identifier": "localhost",
+        "Name": "Localhost",
+        "ConnectionString": "Server=localhost;Database=taskmanagement;User=sha256user;Password=System@123321"
+      },
+      {
+        "Id": "tenant-abc",
+        "Identifier": "abc",
+        "Name": "ABC Corporation",
+        "ConnectionString": "Server=localhost;Database=taskmanagement_abc;User=sha256user;Password=System@123321"
+      },
+      {
+        "Id": "tenant-xyz",
+        "Identifier": "xyz",
+        "Name": "XYZ Corporation",
+        "ConnectionString": "Server=localhost;Database=taskmanagement_xyz;User=sha256user;Password=System@123321"
+      }
+    ]
+  }
 }
