--- a/TaskManagement.Api/TaskManagement.Api.csproj
+++ b/TaskManagement.Api/TaskManagement.Api.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+        <PackageReference Include="Finbuckle.MultiTenant" Version="5.0.4" />
         <PackageReference Include="FluentValidation" Version="9.1.2" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="9.1.2" />
         <PackageReference Include="MediatR" Version="8.1.0" />
@@ -20,6 +21,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\TaskManagement.Persistence.MySQL\TaskManagement.Persistence.MySQL.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Include="tenants.json" />
     </ItemGroup>
 
 </Project>
