--- a/TaskManagement.Persistence.MySQL/TaskManagement.Persistence.MySQL.csproj
+++ b/TaskManagement.Persistence.MySQL/TaskManagement.Persistence.MySQL.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Finbuckle.MultiTenant" Version="5.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.7" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.7" />
